# paper-reading-assistant

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  launcher.py  package.json  requirements.txt  run_app.bat  start_app.py
.uploads/: 4a2cadc9-777c-492d-a9f1-fe78f4095213_cyberpunk-anime-ui.html  674dfa06-7aca-4bc3-8638-262a1919e56a_design-spec.md
app/: config.py  main.py
app/database/: init_db.py  session.py
app/models/: __init__.py  agent_rule.py  chat_message.py  chat_session.py  concept.py  cost_log.py  knowledge_document.py  knowledge_edge.py  llm_cache.py  llm_call.py  memory_entity.py  memory_observation.py  note_snapshot.py  paper.py  reading_history.py  research_memory.py  research_report.py  sandbox_record.py  skill.py  system_log.py  topic.py  word_occurrence.py  workspace.py
app/routes/: chat.py  knowledge.py  memory.py  obsidian.py  papers.py  reading.py  recommend.py  research.py  rules.py  sandbox.py  skills.py  system.py  topics.py  wiki.py  workspace.py
assets/: icon_generator.py  icon_generator_v2.py  icon_generator_v3.py
scripts/: add_doi_column.py  enrich_paper_metadata.py  mineru_parser.py  pdf_parser_local.py
streamlit_app/: __init__.py  main.py
tests/: test_cost_tracker.py  test_document_parser.py  test_knowledge_api.py  test_knowledge_engine.py  test_logging.py  test_obsidian_writer.py  test_paper_parser.py  test_snapshot_manager.py  test_wiki.py
v2/: .dockerignore
v2/core/: Cargo.toml
v2/core/src/: config.rs  db.rs  dreaming.rs  http.rs  main.rs  memory.rs  vector.rs
(+225 files in other folders)
