[package]
name = "nuclear-ox-core"
version = "0.1.0"
edition = "2021"
description = "核动力科研牛马 v2 Rust core — 向量化 / 记忆引擎 / 睡眠式整合"
license = "MIT"

[lib]
name = "nuclear_ox_core"
path = "src/lib.rs"

[[bin]]
name = "nuclear-ox-core"
path = "src/main.rs"

[dependencies]
# Web 框架
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite（与 Go 后端共用同一数据库文件，只读记忆表 + 写长期记忆）
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP 客户端（调用 Ollama / OpenAI embedding）
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# 工具
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
# 测试用
tempfile = "3"
mockito = "1"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
